@@ -78,6 +78,7 @@ char *get_type_from_pid(pid_t pid, size_t blen, char *buf);
 uid_t get_program_auid_from_pid(pid_t pid);
 int get_program_sessionid_from_pid(pid_t pid);
 uid_t get_program_uid_from_pid(pid_t pid);
+int get_program_gid_from_pid(pid_t pid);
 int check_environ_from_pid(pid_t pid);
 
 #endif
